PRFL-798 fix CSS for personal summary, was overflowing
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@121690 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -846,6 +846,11 @@ h2 {
 	padding: 0;
 }
 
+.connections-wrap .connection-summary-wrap,
+.search-result .search-result-summary-wrap {
+	width:340px;
+}
+
 .search-result-summary {
 	word-wrap:break-word;
 }
